@@ -7,7 +7,10 @@ import ru.javarush.syrovatko.entities.Human;
 import ru.javarush.syrovatko.entities.UserAddress;
 import ru.javarush.syrovatko.enums.GenderType;
 
+import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.file.Files;
 import java.time.LocalDate;
 import java.time.Month;
 
@@ -20,16 +23,19 @@ public class Main {
             session.beginTransaction();
 
             Human human = new Human();
-            human.setAdress(new UserAddress("Russia", "Moscow", "Udaltsova", "61"));
+            human.setAddress(new UserAddress("Russia", "Moscow", "Udaltsova", "61"));
             human.setAdult(true);
             human.setGender(GenderType.MALE);
             human.setBirthdayDate(LocalDate.of(1987, Month.JULY, 1));
             human.setIsActive(true);
             human.setRetirementAge(99); // transient
-            human.setPhoto(Human.class.getClassLoader().getResourceAsStream("123.png").readAllBytes());
+           // human.setPhoto(Human.class.getClassLoader().getResourceAsStream("123.png").readAllBytes());
+            human.setPhoto(Files.readAllBytes(new File("src/main/resources/123.png").toPath()));
 
             session.persist(human);
+
             session.getTransaction().commit();
+
 
         }
 
